# baoab-constraints

./: Average.cpp  Average.h  BAOAB.cpp  BAOAB.h  BAOAB_with_DoPri.cpp  BAOAB_with_RATTLE.cpp  BAOAB_with_Rotation.cpp  CMakeLists.txt  Experiment.cpp  Experiment.h  Force.cpp  Force.h  Histogram.cpp  Histogram.h  Misc.h  Options.cpp  Options.h  Plotter.cpp  Plotter.h  README.org  abort_unless.h  analyze.m  analyze_simulations.m  baoab.cpp  baoab.h  common.m  config.m  dop853.c  dop853.h  dopri5.c  dopri5.h  double2.h  histogram.gp  histogram.m  integrands.c  integrands.h  integration-cubature.cpp  integration-montecarlo.cpp  integration.cpp  launch_simulations.m  (+6 more)
contrib/: cubature
matlab/: analyze.m  launch_simulations.m
scripts/: analyze_simulations.m  ensemble_average.m  graphs.gp  histogram.m  launch.sh  script.sed
